--- a/cda-python-components/config/PiotConfig.props
+++ b/cda-python-components/config/PiotConfig.props
@@ -8,6 +8,21 @@
 #
 
 #
+# Cloud client configuration information
+#
+[Cloud.GatewayService]
+credFile       = ./cred/UbidotsCloudCred.props
+certFile       = ./cert/UbidotsCloudCert.pem
+host           = industrial.api.ubidots.com
+port           = 1883
+securePort     = 8883
+defaultQoS     = 0
+keepAlive      = 30
+enableCrypt    = True
+baseUrl        = https://things.ubidots.com/api/v1.6/
+baseTopic      = /v1.6/devices/
+
+#
 # MQTT client configuration information
 #
 [Mqtt.GatewayService]
@@ -78,4 +93,3 @@ streamFrameHeight   = 1080
 streamFps           =   30
 imageFileExt        = .png
 videoFileExt        = .avi
-minMotionPixelsDiff = 10000
